k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: web
spec:
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
